--- a/TF_pyber.ipynb
+++ b/TF_pyber.ipynb
@@ -2196,10 +2196,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2375"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pyber_data_df[\"ride_id\"].count()"
+   ]
   },
   {
    "cell_type": "code",
